Fix to clicking active panel on mobile
Fixes JS bug for click events

Cleans up unneeded parameter for toggleSidebar

Fixes missed <p>-><span> that was making invalid HTML

Adds encoding meta tag

--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ a:visited {
   width: 100%;
 	font-style: italic;
   margin: 0;
-  -webkit-margin-after: 0;
 }
 
 .collapse {
